MainMethodTestCases/src/com/example/valid/Main7.java
package com.example.valid;

public class Main7 {

	/**
	 * Valid.
	 * 
	 * This is the most common form of the main method except that the square
	 * brackets for the String array have been put beside the variable. This is
	 * valid, but many think, harder to read.
	 * 
	 * Source: https://rationalpi.wordpress.com/2007/01/29/main-methods-in-java/
	 */
	public static void main(String args[]) {
		System.out.println("Main7!");
	}

}
